[metadata]
name = entropy 
version = 0.1
summary = Framework to write audit/repair scripts for openstack
description-file =
    README.md
author = Entropy devs
author-email = praneshpg@gmail.com
home-page = http://entropy.readthedocs.org/
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    entropy

[nosetests]
verbosity=2

[build_sphinx]
source-dir = docs/
build-dir = docs/build/
all_files = 1

[upload_sphinx]
upload-dir = docs/build/html
